--- a/Bibfile.bib
+++ b/Bibfile.bib
@@ -1,3 +1,566 @@
 % Encoding: UTF-8
 
+@Article{Breslow1993,
+  author  = {Breslow, Norman E and Clayton, David G},
+  title   = {Approximate Inference in Generalized Linear Mixed Models},
+  journal = {Journal of the American Statistical Association},
+  year    = {1993},
+  volume  = {88},
+  number  = {421},
+  pages   = {9--25},
+}
 
+@Article{Zeger1994,
+  author  = {Zeger, S. L. and Diggle, P. J.},
+  title   = {Semi-parametric models for longitudinal data with application to CD4 cell numbers in HIV seroconverters},
+  journal = {Biometrics},
+  year    = {1994},
+  volume  = {50},
+  pages   = {689--699},
+}
+
+@Article{Lin1996,
+  author  = {Lin, Xihong and Breslow, Norman E},
+  title   = {Bias Correction in Generalized Linear Mixed Models with Multiple Components of Dispersion},
+  journal = {Journal of the American Statistical Association},
+  year    = {1996},
+  volume  = {91},
+  number  = {435},
+  pages   = {1007--1016},
+}
+
+@Article{Osullivan1986,
+  author  = {Osullivan, Finbarr and Yandell, Brian S and Raynor, J William},
+  title   = {Automatic Smoothing of Regression Functions in Generalized Linear Models},
+  journal = {Journal of the American Statistical Association},
+  year    = {1986},
+  volume  = {81},
+  number  = {393},
+  pages   = {96--103},
+}
+
+@Article{Tierney1986,
+  author  = {Tierney, Luke and Kadane, Joseph B},
+  title   = {Accurate Approximations for Posterior Moments and Marginal Densities},
+  journal = {Journal of the American Statistical Association},
+  year    = {1986},
+  volume  = {81},
+  number  = {393},
+  pages   = {82--86},
+}
+
+@Article{Green1987,
+  author  = {Green, Peter},
+  title   = {Penalized Likelihood for General Semi-parametric Regression Models},
+  journal = {International Statistical Review},
+  year    = {1987},
+  volume  = {55},
+  number  = {3},
+  pages   = {245--259},
+}
+
+@Article{Wahba1978,
+  author  = {Wahba, Grace},
+  title   = {Improper Priors, Spline Smoothing and the Problem of Guarding Against Model Errors in Regression},
+  journal = {Journal of the royal statistical society series b-methodological},
+  year    = {1978},
+  volume  = {40},
+  number  = {3},
+  pages   = {364--372},
+}
+
+@Article{Wahba1985,
+  author  = {Wahba, Grace},
+  title   = {A Comparison of GCV and GML for Choosing the Smoothing Parameter in the Generalized Spline Smoothing Problem},
+  journal = {Annals of Statistics},
+  year    = {1985},
+  volume  = {13},
+  number  = {4},
+  pages   = {1378--1402},
+}
+
+@Article{Kohn1991,
+  author  = {Kohn, Robert and Ansley, Craig F and Tharm, David},
+  title   = {The Performance of Cross-Validation and Maximum Likelihood Estimators of Spline Smoothing Parameters},
+  journal = {Journal of the American Statistical Association},
+  year    = {1991},
+  volume  = {86},
+  number  = {416},
+  pages   = {1042--1050},
+}
+
+@Article{Harville1974,
+  author  = {Harville, David A},
+  title   = {Bayesian inference for variance components using only error contrasts},
+  journal = {Biometrika},
+  year    = {1974},
+  volume  = {61},
+  number  = {2},
+  pages   = {383--385},
+}
+
+@Article{Brumback1998,
+  author  = {Brumback, Babette A and Rice, John A},
+  title   = {Smoothing Spline Models for the Analysis of Nested and Crossed Samples of Curves},
+  journal = {Journal of the American Statistical Association},
+  year    = {1998},
+  volume  = {93},
+  number  = {443},
+  pages   = {961--976},
+}
+
+@Article{Wang1998,
+  author  = {Wang, Yuedong},
+  title   = {Mixed effects smoothing spline analysis of variance},
+  journal = {Journal of The Royal Statistical Society Series B-statistical Methodology},
+  year    = {1998},
+  volume  = {60},
+  number  = {1},
+  pages   = {159--174},
+}
+
+@Article{Lee1996,
+  author  = {Lee, Youngjo and Nelder, J A},
+  title   = {Hierarchical generalized linear models. Discussion},
+  journal = {Journal of the royal statistical society series b-methodological},
+  year    = {1996},
+  volume  = {58},
+  number  = {4},
+  pages   = {619--656},
+}
+
+@Article{Rodriguez1995,
+  author  = {Rodriguez, Germaan and Goldman, Noreen},
+  title   = {An Assessment of Estimation Procedures for Multilevel Models with Binary Responses},
+  journal = {Journal of The Royal Statistical Society Series A-statistics in Society},
+  year    = {1995},
+  volume  = {158},
+  number  = {1},
+  pages   = {73--89},
+}
+
+@Book{Green1984,
+  title     = {Nonparametric Regression and Generalized Linear Models},
+  publisher = {London:Chapman and Hall},
+  year      = {1984},
+  author    = {Green, P. J. and Silverman, B. W},
+}
+
+@Article{Zhang1998,
+  author  = {Zhang, D., Lin, X., Raz, J. and Sowers, M.},
+  title   = {Semi-parametric stochastic mixed models for longitudinal data},
+  journal = {Journal of the American Statistical Association},
+  year    = {1998},
+  volume  = {93},
+  pages   = {710--719},
+}
+
+@Book{Hastie1990,
+  title     = {Generalized Additive Models.},
+  publisher = {London: Chapman and Hall.},
+  year      = {1990},
+  author    = {Hastie, T. and Tibshirani, R.},
+}
+
+@Article{Wahba1983,
+  author  = {Wahba, Grace},
+  title   = {Bayesian ``confidence intervals'' for the cross-validated smoothing spline},
+  journal = {Journal of the royal statistical society series b-methodological},
+  year    = {1983},
+  volume  = {45},
+  pages   = {133--150},
+}
+
+@Article{Thompson1985,
+  author  = {Thompson, R.},
+  title   = {Discussion on Some aspects of the spline smoothing approach to non-parametric regression curve fitting (by B. W. Silverman)},
+  journal = {Journal of the royal statistical society series b-methodological},
+  year    = {1985},
+  volume  = {47},
+  pages   = {43--44},
+}
+
+@Article{Speed1991,
+  author  = {Speed, T.},
+  title   = {Discussion on BLUP is a good thing: the estimation of random effects, by Robinson, G. K},
+  journal = {Statistical Science},
+  year    = {1991},
+  volume  = {6},
+  pages   = {15--51},
+}
+
+@Article{Wolfinger1996,
+  author  = {Wolfinger, R.},
+  title   = {The GLIMMIX SAS macro},
+  journal = {Cary: SAS Institute},
+  year    = {1996},
+}
+
+@Book{Cressie1993,
+  title     = {Statistics for Spatial Data, 2nd edn.},
+  publisher = {New York: Wiley.},
+  year      = {1993},
+  author    = {Cressie, N. A. C.},
+}
+
+@Book{Davison2003,
+  title     = {Statistical Models},
+  publisher = {Cambridge: Cambridge University Press},
+  year      = {2003},
+  author    = {Davison, A. C.},
+}
+
+@Book{Wood2015,
+  title     = {Core Statistics},
+  publisher = {Cambridge University Press},
+  year      = {2015},
+  author    = {Wood, S.N.},
+}
+
+@Article{Shun1995,
+  author  = {Shun, Z. and P. McCullagh},
+  title   = {Laplace approximation of high dimensional integrals},
+  journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  year    = {1995},
+  volume  = {54},
+  number  = {4},
+  pages   = {749–760},
+}
+
+@Book{Pinheiro2000,
+  title     = {Mixed-effects models in S and S-PLUS},
+  publisher = {New York: Springer-Verlag},
+  year      = {2000},
+  author    = {Pinheiro, J. C. and D. M. Bates},
+}
+
+@Article{Wood2013,
+  author  = {Wood, Simon N},
+  title   = {On p-values for smooth components of an extended generalized additive model},
+  journal = {Biometrika},
+  year    = {2013},
+  volume  = {100},
+  number  = {1},
+  pages   = {221--228},
+}
+
+@Article{Wood2013a,
+  author  = {Wood, Simon N},
+  title   = {A simple test for random effects in regression models},
+  journal = {Biometrika},
+  year    = {2013},
+  volume  = {100},
+  number  = {4},
+  pages   = {1005--1010},
+}
+
+@Article{Zhao2006,
+  author  = {Zhao, Yihua and Staudenmayer, John and Coull, Brent A and Wand, M P},
+  title   = {General design Bayesian generalized linear mixed models},
+  journal = {Statistical Science},
+  year    = {2006},
+  volume  = {21},
+  number  = {1},
+  pages   = {35--51},
+}
+
+@Article{Neal2003,
+  author  = {Neal, R.},
+  title   = {Slice sampling (with discussion)},
+  journal = {The Annals of Statistics},
+  year    = {2003},
+  volume  = {35},
+  pages   = {705--767},
+}
+
+@Article{Smith1996,
+  author  = {Smith,M. and R. Kohn},
+  title   = {Nonparametric Regression using Bayesian Variable Selection},
+  journal = {Journal of Econometrics},
+  year    = {1996},
+  volume  = {75},
+  pages   = {317--343},
+}
+
+@TechReport{Yau2000,
+  author      = {Yau,P.,R. Kohn, and S.Wood},
+  title       = {Bayesian Variable Selection and Model Averaging in High Dimensional Mulitinomial Nonparametric Regression},
+  institution = {University of NSW},
+  year        = {2000},
+  journal     = {Technical report,University of NSW},
+}
+
+@Article{Denison1998,
+  author  = {Denison,D.,B.Mallick, and A.Smith},
+  title   = {Automatic Bayesian Curve Fiting},
+  journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  year    = {1998},
+  volume  = {60},
+  pages   = {333--350},
+}
+
+@Article{Biller2000,
+  author  = {Biller, Clemens},
+  title   = {Adaptive Bayesian Regression Splines in Semiparametric Generalized Linear Models},
+  journal = {Journal of Computational and Graphical Statistics},
+  year    = {2000},
+  volume  = {9},
+  number  = {1},
+  pages   = {122--140},
+}
+
+@Article{Heikkinen1998,
+  author  = {Heikkinen, J. and E. Arjas},
+  title   = {Nonparametric Bayesian Estimation of a Spatial Possion Intensity},
+  journal = {Scandinavian Journal of Statistics},
+  year    = {1998},
+  volume  = {25},
+  pages   = {435--450},
+}
+
+@Article{Knorrheld2000,
+  author  = {Knorrheld, Leonhard and Raser, Gunter},
+  title   = {Bayesian Detection of Clusters and Discontinuities in Disease Maps},
+  journal = {Biometrics},
+  year    = {2000},
+  volume  = {56},
+  number  = {1},
+  pages   = {13--21},
+}
+
+@Article{Hastie2000,
+  author  = {Hastie, Trevor and Tibshirani, Robert},
+  title   = {Bayesian backfitting (with comments and a rejoinder by the authors},
+  journal = {Statistical Science},
+  year    = {2000},
+  volume  = {15},
+  number  = {3},
+  pages   = {196--223},
+}
+
+@Article{Besag1991,
+  author  = {Besag, Julian and York, Jeremy and Mollie, Annie},
+  title   = {Bayesian Image Restoration,with two Applications in Spatal Statistics},
+  journal = {Annals of the Institute of Statistical Mathematics},
+  year    = {1991},
+  volume  = {43},
+  number  = {1},
+  pages   = {1--59},
+}
+
+@Article{Fahrmeir2001,
+  author  = {Fahrmeir, Ludwig and Lang, Stefan},
+  title   = {Bayesian inference for generalized additive mixed models based on Markov random field priors},
+  journal = {Journal of The Royal Statistical Society Series C-applied Statistics},
+  year    = {2001},
+  volume  = {50},
+  number  = {2},
+  pages   = {201--220},
+}
+
+@Article{Fahrmeir2001a,
+  author  = {Fahrmeir, Ludwig and Lang, Stefan},
+  title   = {Bayesian Semiparametric Regression Analysis of Multicategorical Time-Space Data},
+  journal = {Annals of the Institute of Statistical Mathematics},
+  year    = {2001},
+  volume  = {53},
+  number  = {1},
+  pages   = {11--30},
+}
+
+@Article{Lang2001,
+  author  = {Lang, Stefan and Brezger, Andreas},
+  title   = {Bayesian P-splines},
+  journal = {SFB 386 Discussion Paper 236,University of Munich},
+  year    = {2001},
+}
+
+@Article{Smith1998,
+  author  = {Smith, Michael S and Wong, Chiming and Kohn, Robert},
+  title   = {Additive nonparametric regression with autocorrelated errors},
+  journal = {Journal of The Royal Statistical Society Series B-statistical Methodology},
+  year    = {1998},
+  volume  = {60},
+  number  = {2},
+  pages   = {311--331},
+}
+
+@Article{Bernardinelli1995,
+  author  = {Bernardinelli, Luisa and Clayton, David and Montomoli, Cristina},
+  title   = {Bayesian estimates of disease maps: How important are priors?},
+  journal = {Statistics in Medicine},
+  year    = {1995},
+  volume  = {14},
+  pages   = {2411--2431},
+}
+
+@Article{Knorr-Held1998,
+  author  = {Knorr-Held, L. and J. Basag},
+  title   = {Modelling Risk from a Desease in Time and Space},
+  journal = {Statistics and Medicine},
+  year    = {1998},
+  volume  = {17},
+  pages   = {2045--2060},
+}
+
+@Article{Knorrheld1999,
+  author  = {Knorrheld, Leonhard},
+  title   = {Conditional Prior Proposals in Dynamic Models},
+  journal = {Scandinavian Journal of Statistics},
+  year    = {1999},
+  volume  = {26},
+  number  = {1},
+  pages   = {129--144},
+}
+
+@Article{Gamerman1997,
+  author  = {Gamerman, Dani},
+  title   = {Sampling from the posterior distribution in generalized linear mixed models},
+  journal = {Statistics and Computing},
+  year    = {1997},
+  volume  = {7},
+  number  = {1},
+  pages   = {57--68},
+}
+
+@Article{Lin1999,
+  author  = {Lin, Xihong and Zhang, Daowen},
+  title   = {Inference in generalized additive mixed modelsby using smoothing splines},
+  journal = {Journal of The Royal Statistical Society Series B-statistical Methodology},
+  year    = {1999},
+  volume  = {61},
+  number  = {2},
+  pages   = {381--400},
+}
+
+@Article{Breslow1995,
+  author  = {Breslow, Norman E and Lin, Xihong},
+  title   = {Bias correction in generalised linear mixed models with a single component of dispersion},
+  journal = {Biometrika},
+  year    = {1995},
+  volume  = {82},
+  number  = {1},
+  pages   = {81--91},
+}
+
+@Article{Wong1996,
+  author  = {Wong, Chiming and Kohn, Robert},
+  title   = {A Bayesian Approach to Estimation and Forecasting Addtive Nonparametric Autoregressive Models},
+  journal = {Journal of Time Series Analysis},
+  year    = {1996},
+  volume  = {17},
+  number  = {2},
+  pages   = {203--220},
+}
+
+@TechReport{Rue2000,
+  author      = {Havard Rue},
+  title       = {Fast Sampling of Gaussian Markov Random Fields with Applications},
+  institution = {Norwegian University for Science and Technology},
+  year        = {2000},
+  address     = {Trondheim},
+  publisher   = {Technical Report. Norwegian University for Science and Technology, Trondheim},
+}
+
+@Book{Mallick2000,
+  title     = {Semiparametric generalized linear models: Bayesian approaches. In Generalized Linear Models: a Bayesian Perspective},
+  publisher = {New York : Dekker},
+  year      = {2000},
+  author    = {Mallick, B.K. ,Denison, D. G. T. and Smith, A. F. M.},
+}
+
+@Book{Fahrmeir1997,
+  title     = {Muitivariate Statistical Modelling based on Generalized Linear models},
+  publisher = {New York: Springer},
+  year      = {1997},
+  author    = {Fahrmeir, L. and Tutz, G.},
+}
+
+@Article{Besag1974,
+  author  = {Besag, Julian},
+  title   = {Spatial Interaction and the Statistical Analysis of Lattice Systems(with discussion)},
+  journal = {Journal of the royal statistical society series b-methodological},
+  year    = {1974},
+  volume  = {36},
+  number  = {2},
+  pages   = {192--236},
+}
+
+@Article{Basag1995,
+  author  = {Basag, J. and Kooperberg, C.},
+  title   = {On conditional and intrinsic autoregressions},
+  journal = {Biometrika},
+  year    = {1995},
+  volume  = {82},
+  pages   = {733--746},
+}
+
+@IEEEtranBSTCTL{Berzuini1996,
+  author  = {Berzuini , C. and Larizza，Ch.},
+  journal = {IEEE Trans. Pattn Anal. Mach. Intell.},
+  pages   = {109--122},
+  title   = {A unified approach for modeling longitudinal and failure time data, with application in medical monitoring},
+  volume  = {18},
+  year    = {1996},
+}
+
+@Article{Biller1997,
+  author  = {Biller, C. and Fahrmeir, L.},
+  title   = {Bayesian spline-type smoothing in additive generalized regression},
+  journal = {Computational Statistics},
+  year    = {1997},
+  volume  = {12},
+  pages   = {135--151},
+}
+
+@Article{Kohn1987,
+  author  = {Kohn, Robert and Ansley, Craig F},
+  title   = {A new algorithm for spline smoothing based on smoothing a stochastic process},
+  journal = {Siam Journal on Scientific and Statistical Computing},
+  year    = {1987},
+  volume  = {8},
+  number  = {1},
+  pages   = {33--48},
+}
+
+@Article{Besag1995,
+  author  = {Besag, Julian and Green, Peter and Higdon, David and Mengersen, Kerrie},
+  title   = {Bayesian Computation and Stochastic Systems},
+  journal = {Statistical Science},
+  year    = {1995},
+  volume  = {10},
+  number  = {1},
+  pages   = {3--41},
+}
+
+@Article{Hobert1996,
+  author  = {Hobert, James P and Casella, George},
+  title   = {The Effect of Improper Priors on Gibbs Sampling in Hierarchical Linear Mixed Models},
+  journal = {Journal of the American Statistical Association},
+  year    = {1996},
+  volume  = {91},
+  number  = {436},
+  pages   = {1461--1473},
+}
+
+@Article{Carlin1992,
+  author  = {Carlin, Bradley P and Polson, Nicholas G and Stoffer, David S},
+  title   = {A monte carlo approach to nonnormal and nonlinear state–space modeling},
+  journal = {Journal of the American Statistical Association},
+  year    = {1992},
+  volume  = {87},
+  number  = {418},
+  pages   = {493--500},
+}
+
+@Article{Carter1994,
+  author  = {Carter, Chris and Kohn, Robert},
+  title   = {On Gibbs sampling for state space models},
+  journal = {Biometrika},
+  year    = {1994},
+  volume  = {81},
+  number  = {3},
+  pages   = {541--553},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
